# XmlObjDesc

./: .gitignore  CMakeLists.txt  README.md
python/: genClassDicts.py  genClasses.py  genLinkDef.py  genNamespaces.py  genSrc.py  genSrcUtils.py  godII.py  gparser.py  importUtils.py  tools.py  xparser.py
python/xml/parsers/xmlproc/: _outputters.py  charconv.py  dtdparser.py  errors.py  xmlapp.py  xmldtd.py  xmlproc.py  xmlutils.py  xmlval.py
python/xml/utils/: characters.py
templates/: header.tpl
